# fm_data_tasks

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
fm_data_tasks/: run_inference.py
fm_data_tasks/utils/: cache.py  client.py  constants.py  data_utils.py  prompt_utils.py  utils.py
notebooks/: data_transformation_experiments.ipynb
scripts/: run_imputation.zsh  run_results.zsh  run_val_clusters_results.zsh
