[tool.poetry]
name = "fm_data_tasks"
version = "0.0.1"
description = "Foundation Models for Data Tasks"
authors = ["Avanika Narayan <avanikan@stanford.edu>", "Ines Chami <ines.chami@numbersstation.ai>", "Laurel Orr <lorr1@cs.stanford.edu>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
rich = "^12.2.0"
numpy = "^1.22.3"
pandas = "^1.4.2"
openai = "^0.18.0"
ipdb = "^0.13.9"
pyarrow = "^7.0.0"
scipy = "^1.8.0"
datasets = "^2.1.0"
transformers = "^4.18.0"
torch = "^1.8"
black = "^22.3.0"
isort = "^5.10.1"
sklearn = "^0.0"
argh = "^0.26.2"
wandb = "^0.12.14"
ujson = "^5.2.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
sqlitedict = "^2.0.0"
sentence-transformers = "^2.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
